<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmCast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dlg_title_widgets">"Pick a Widget</string>

    <!-- chromecast receiver appid -->
    <string name="app_id">BFD56799</string>
    <string name="namespace">urn:x-cast:alarmcast.app</string>

    <!--Widget setting dialog hints -->
    <string name="et_hint_youtube">"Youtube URL"</string>
    <string name="et_hint_map_start">"Start Location"</string>
    <string name="et_hint_map_end">"End Location"</string>
    <string name="et_hint_weather">"Weather Location"</string>

    <string name="et_info_weather">"Enter a location or use current."</string>

    <!-- Tab Names -->
    <string name="tab_one">Four Widgets</string>
    <string name="tab_two">Three Widgets</string>
    <string name="tab_three">Two Widgets</string>

    <!-- Dialog Buttons -->
    <string name="dlg_accept">Accept</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_use_current">Use Current</string>
    <string name="toast_no_setting">No setting found for this widget.</string>

    <!-- Toasts -->
    <string name="tst_save_widgets">Current widgets will display on TV when your alarm goes off.</string>




</resources>
