<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/icons" >

    <ImageView
        android:padding="5dp"
        android:background="@color/primary"
        android:text="@string/app_name"
        android:src="@drawable/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center" />

    <EditText
        android:id="@+id/tv_map_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:hint="@string/et_hint_map_start" />

    <EditText
        android:id="@+id/tv_map_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"

        android:hint="@string/et_hint_map_end" />

</LinearLayout>